--- a/index.html
+++ b/index.html
@@ -3,59 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Website</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #191b19;
-            color: #F8F8FF;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #b3e5fc;
-            padding: 20px;
-            text-align: center;
-        }
-        h1 {
-            margin: 0;
-        }
-        section {
-            padding: 20px;
-        }
-        footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #F8F8FF;
-        }
-        a {
-            color: #191b19;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <title>Roselller - Personal Website</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Personal Website</h1>
-        <p>Your tagline goes here</p>
-    </header>
-    <section>
-        <h2>About Me</h2>
-        <p>Introduce yourself here. Talk about your background, interests, and what you do.</p>
+    <nav>
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+    <section class="hero">
+        <div class="container">
+            <h1>Welcome to My Portfolio</h1>
+            <p>Developer • Creator • Innovator</p>
+        </div>
     </section>
-    <section>
-        <h2>Portfolio</h2>
-        <p>Showcase your work here. You can include links to projects or images of your work.</p>
+
+    <section id="about" class="about">
+        <div class="container">
+            <h2>About Me</h2>
+            <p>IT student with experience in creative design with Adobe Creative Cloud (i.e. Photoshop, After Effects, Illustrator). Currently studying to be an IT professional with Applied Analytics, RPA, programming experience and skills. A leader and learner with never-ending curiosity.</p>
+        </div>
     </section>
-    <section>
-        <h2>Contact</h2>
-        <p>If you'd like to get in touch, feel free to <a href="mailto:your.email@example.com">email me</a>.</p>
+
+    <section id="projects" class="projects">
+        <div class="container">
+            <h2>My Projects</h2>
+            <div class="project-grid">
+                <div class="project-card">
+                    <h3>Project 1</h3>
+                    <p>Description of your first project goes here.</p>
+                </div>
+                <div class="project-card">
+                    <h3>Project 2</h3>
+                    <p>Description of your second project goes here.</p>
+                </div>
+            </div>
+        </div>
     </section>
+
+    <section id="contact">
+        <div class="container">
+            <h2>Get In Touch</h2>
+            <p>Feel free to reach out to me through social media!</p>
+            <div class="social-links">
+                <a href="https://instagram.com/bnhisu" target="_blank">Instagram</a>
+            </div>
+        </div>
+    </section>
+
     <footer>
-        <p>&copy; 2023 Your Name</p>
+        <div class="container">
+            <p>Last Updated: 2025-10-20 15:17:05 UTC</p>
+            <p>&copy; 2025 roselller. All rights reserved.</p>
+        </div>
     </footer>
 </body>
 </html>
